--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Fake Todo</title>
+        <title>Nginx Upstream manager</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="/main.css" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" rel="stylesheet">
     </head>
     <body>
-    <h1>Hello Helio Training Class</h1>
+    <h1>NGINX upstream manager</h1>
         <div id="app"></div>
 
         <!-- 
@@ -15,6 +17,10 @@
             
             Bundle.js will not exist until we run our webpack process.
              -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
         <script src="/bundle.js"></script>
+
     </body>
 </html>
