--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -10,14 +10,16 @@
     </head>
     <body>
     <h1>NGINX upstream manager</h1>
+    <div class="container">
         <div id="app"></div>
+</div>
 
         <!-- 
             Notice we are referring to bundle.js as an absolute path to the root directory.
             
             Bundle.js will not exist until we run our webpack process.
              -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+        {{!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>--}}
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
         <script src="/bundle.js"></script>
