--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -9,7 +9,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" rel="stylesheet">
     </head>
     <body>
-    <h1>NGINX upstream manager</h1>
+    <h1>NGINX upstream viewer</h1>
     <div class="container">
         <div id="app"></div>
 </div>
